# vet-exam-llm

./: .gitignore  README.md  pyproject.toml
chromadb/: chroma.sqlite3
data/cot-gpt4/: exam-72-result.csv  exam-74-result-manual-format.csv  exam-74-result.csv
data/cot-template/: exam-72-result.csv
data/gpt4-with-cot-template/: exam-74-result-manual-format.csv  exam-74-result.csv
data/processed/: exam-70.csv  exam-71.csv  exam-72.csv  exam-73.csv  exam-74.csv
data/simple-gpt4/: exam-73-result.csv  exam-74-result.csv
med_prompt/: 1_create_embeddings.ipynb  2_gpt4_with_cot_template.ipynb  3_gpt4_with_med_prompt.ipynb
notes/: 1_parse_pdf.ipynb  2_simple_gpt4.ipynb  3_cot_gpt4.ipynb
src/: med_prompt.py  parse_answer_pdf.py  parse_question_pdf.py
